# rizz

./: .coveragerc  .gitignore  Makefile  README.md  api.py  app.py  increment_version.py  middleware.py  pyproject.toml  requirements.txt  response.py  test_rizz.py
example/templates/: error.html
rizz_wsgi/: README.md  api.py  middleware.py  request.py  setup.py
rizz_wsgi/rizz_wsgi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: increment_version.py
static/: main.css
templates/: index.html
tests/: test_rizz.py
