[project]
name = "rizz_wsgi"
version = "0.0.5"
description = "Rizz is a Python web framework and can be used with any WSGI application server such as Gunicorn."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "Operating System :: OS Independent",]
dependencies = [ "Jinja2", "parse", "requests", "requests-wsgi-adapter", "WebOb", "whitenoise",]
[[project.authors]]
name = "Alex Kiura"
email = "kiuraalex@gmail.com"

[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/mrkiura/rizz"
